--- a/src/pages/lesson1/index.html
+++ b/src/pages/lesson1/index.html
@@ -7,7 +7,7 @@
     <title>Three.js</title>
   </head>
   <body>
-    <div id="app"></div>
+    <div id="app">lesson1</div>
     <script type="module" src="./index.ts"></script>
   </body>
 </html>
