--- a/src/pages/baseScene/index.html
+++ b/src/pages/baseScene/index.html
@@ -4,10 +4,10 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Three.js</title>
+    <title>Three.js - baseScene</title>
   </head>
   <body>
-    <div id="app">lesson1</div>
+    <div id="app"></div>
     <script type="module" src="./index.ts"></script>
   </body>
 </html>
